--- a/Thuviksa.ipynb
+++ b/Thuviksa.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "085d5dc7",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "d16ca965",
    "metadata": {},
    "outputs": [
@@ -71,7 +71,7 @@
      "output_type": "stream",
      "text": [
       "Found   14 image files.\n",
-      "Open this notebook in Jupyter Notebooks to see the pictures 😄\n"
+      "Open this notebook in Jupyter Notebooks to see the pictures neatly in a row 😄\n"
      ]
     },
     {
@@ -157,7 +157,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +185,7 @@
     "\n",
     "files = glob('Images/*')\n",
     "print (\"Found {0:4d} image files.\".format(len(files)))\n",
-    "print(\"Open this notebook in Jupyter Notebooks to see the pictures 😄\")\n",
+    "print(\"Open this notebook in Jupyter Notebooks to see the pictures neatly in a row 😄\")\n",
     "\n",
     "images=[]\n",
     "for file in files:\n",
